test-suite/invalid/syntax/unquoted-string.jyml
# Invalid: unquoted string (JYAML requires quotes)
hello world